[package]
name = "synapse-tutor"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A simple neural network implementation in Rust that learns the XOR function using backpropagation"
license = "MIT"
repository = "https://github.com/yourusername/synapse-tutor"
keywords = ["neural-network", "machine-learning", "rust", "xor", "backpropagation"]
categories = ["science", "algorithms"]
rust-version = "1.70"

[dependencies]
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
